--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-default navbar-fixed-top navbar-transparent">
       <div class="container">
         <%= link_to root_path do %>
-          <span><%= image_tag "logo.png", class: "navbar-brand" %></span>
+          <span><%= image_tag "background/one.jpeg", class: "navbar-brand" %></span>
 
         <% end %>
         <ul class="nav navbar-nav navbar-right">
